--- a/index.html
+++ b/index.html
@@ -13,204 +13,164 @@
 
 <body>
     <div class="container bg-white">
-        <div class="row">
+        <div class="row p-2">
             <div class="col-4 d-flex justify-content-between align-items-center">
                 <div>
-                    <img src="" alt="">
-                    <span>nome utente</span>
+                    <img src="img/avatar_io.jpg" alt="">
+                    <span>Sofia</span>
                 </div>
-                <div>
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
+                <div class="me-4 text-secondary">
+                    <span><i class="fa-solid fa-circle-notch"></i></span>
+                    <span class="px-2"><i class="fa-solid fa-message"></i></span>
+                    <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
                 </div>
             </div>
             <div class="col-8 d-flex justify-content-between">
-                <div class="d-flex flex-column">
-                    <img src="" alt="">
-                    <span>nome utente</span>
-                    <span>ultimo accesso</span>
+                <div class="d-flex">
+                    <img src="img/avatar_1.jpg" alt="">
+                    <div class="d-flex flex-column">
+                        <span class="">Michele</span>
+                        <span class="">Ultimo accesso oggi alle 12:00</span>
+                    </div>
                 </div>
-                <div class="align-self-center">
-                    <span>1</span>
-                    <span>2</span>
-                    <span>3</span>
+                <div class="align-self-center me-4 text-secondary">
+                    <span><i class="fa-solid fa-magnifying-glass"></i></span>
+                    <span class="px-2"><i class="fa-solid fa-paperclip"></i></span>
+                    <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-4 overflow-y-scroll">
-                <div>
-                    <img src="" alt="">
-                    <h5>Ricevi notifiche di nuovi messaggi</h5>
-                    <span>Attiva notifiche desktop</span>
+            <div class="col-4 p-0">
+                <div class="d-flex">
+                    <i class="fa-solid fa-bell-slash notificationIcon"></i>
+                    <div>
+                        <h5>Ricevi notifiche di nuovi messaggi</h5>
+                        <span>Attiva notifiche desktop</span>
+                    </div>
                 </div>
                 <div>
                     <nav class="navbar bg-body-tertiary">
                         <form class="container-fluid">
-                          <div class="input-group">
-                            <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
-                            <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat" aria-label="Username" aria-describedby="basic-addon1">
-                          </div>
+                            <div class="input-group">
+                                <span class="input-group-text" id="basic-addon1"><i
+                                        class="fa-solid fa-magnifying-glass"></i></span>
+                                <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat"
+                                    aria-label="Username" aria-describedby="basic-addon1">
+                            </div>
                         </form>
-                      </nav>
+                    </nav>
                 </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <img src="" alt="">
+                <div class="container  overflow-y-scroll">
+                    <div class="row p-2">
+                        <div class="col-auto">
+                            <img src="img/avatar_1.jpg" alt="">
+                        </div>
+                        <div class="col">
+                            <h5>Michele</h5>
+                            <span>Ultimo messaggio inviato</span>
+                        </div>
+                        <div class="col-auto">
+                            <span>12:00</span>
+                        </div>
                     </div>
-                    <div class="col">
-                        <h5>Michele</h5>
-                        <span>Ultimo messaggio inviato</span>
+                    <div class="row p-2">
+                        <div class="col-auto">
+                            <img src="img/avatar_2.jpg" alt="">
+                        </div>
+                        <div class="col">
+                            <h5>Michele</h5>
+                            <span>Ultimo messaggio inviato</span>
+                        </div>
+                        <div class="col-auto">
+                            <span>12:00</span>
+                        </div>
                     </div>
-                    <div class="col-auto">
-                        <span>12:00</span>
-                    </div>                    
+                    <div class="row p-2">
+                        <div class="col-auto">
+                            <img src="img/avatar_3.jpg" alt="">
+                        </div>
+                        <div class="col">
+                            <h5>Michele</h5>
+                            <span>Ultimo messaggio inviato</span>
+                        </div>
+                        <div class="col-auto">
+                            <span>12:00</span>
+                        </div>
+                    </div>
+                    <div class="row p-2">
+                        <div class="col-auto">
+                            <img src="img/avatar_4.jpg" alt="">
+                        </div>
+                        <div class="col">
+                            <h5>Michele</h5>
+                            <span>Ultimo messaggio inviato</span>
+                        </div>
+                        <div class="col-auto">
+                            <span>12:00</span>
+                        </div>
+                    </div>
+                    <div class="row p-2">
+                        <div class="col-auto">
+                            <img src="img/avatar_5.jpg" alt="">
+                        </div>
+                        <div class="col">
+                            <h5>Michele</h5>
+                            <span>Ultimo messaggio inviato</span>
+                        </div>
+                        <div class="col-auto">
+                            <span>12:00</span>
+                        </div>
+                    </div>
+                    <div class="row p-2">
+                        <div class="col-auto">
+                            <img src="img/avatar_6.jpg" alt="">
+                        </div>
+                        <div class="col">
+                            <h5>Michele</h5>
+                            <span>Ultimo messaggio inviato</span>
+                        </div>
+                        <div class="col-auto">
+                            <span>12:00</span>
+                        </div>
+                    </div>
+                    <div class="row p-2">
+                        <div class="col-auto">
+                            <img src="img/avatar_7.jpg" alt="">
+                        </div>
+                        <div class="col">
+                            <h5>Michele</h5>
+                            <span>Ultimo messaggio inviato</span>
+                        </div>
+                        <div class="col-auto">
+                            <span>12:00</span>
+                        </div>
+                    </div>
+                    <div class="row p-2">
+                        <div class="col-auto">
+                            <img src="img/avatar_8.jpg" alt="">
+                        </div>
+                        <div class="col">
+                            <h5>Michele</h5>
+                            <span>Ultimo messaggio inviato</span>
+                        </div>
+                        <div class="col-auto">
+                            <span>12:00</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <img src="" alt="">
-                    </div>
-                    <div class="col">
-                        <h5>Michele</h5>
-                        <span>Ultimo messaggio inviato</span>
-                    </div>
-                    <div class="col-auto">
-                        <span>12:00</span>
-                    </div>                    
-                </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <img src="" alt="">
-                    </div>
-                    <div class="col">
-                        <h5>Michele</h5>
-                        <span>Ultimo messaggio inviato</span>
-                    </div>
-                    <div class="col-auto">
-                        <span>12:00</span>
-                    </div>                    
-                </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <img src="" alt="">
-                    </div>
-                    <div class="col">
-                        <h5>Michele</h5>
-                        <span>Ultimo messaggio inviato</span>
-                    </div>
-                    <div class="col-auto">
-                        <span>12:00</span>
-                    </div>                    
-                </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <img src="" alt="">
-                    </div>
-                    <div class="col">
-                        <h5>Michele</h5>
-                        <span>Ultimo messaggio inviato</span>
-                    </div>
-                    <div class="col-auto">
-                        <span>12:00</span>
-                    </div>                    
-                </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <img src="" alt="">
-                    </div>
-                    <div class="col">
-                        <h5>Michele</h5>
-                        <span>Ultimo messaggio inviato</span>
-                    </div>
-                    <div class="col-auto">
-                        <span>12:00</span>
-                    </div>                    
-                </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <img src="" alt="">
-                    </div>
-                    <div class="col">
-                        <h5>Michele</h5>
-                        <span>Ultimo messaggio inviato</span>
-                    </div>
-                    <div class="col-auto">
-                        <span>12:00</span>
-                    </div>                    
-                </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <img src="" alt="">
-                    </div>
-                    <div class="col">
-                        <h5>Michele</h5>
-                        <span>Ultimo messaggio inviato</span>
-                    </div>
-                    <div class="col-auto">
-                        <span>12:00</span>
-                    </div>                    
-                </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <img src="" alt="">
-                    </div>
-                    <div class="col">
-                        <h5>Michele</h5>
-                        <span>Ultimo messaggio inviato</span>
-                    </div>
-                    <div class="col-auto">
-                        <span>12:00</span>
-                    </div>                    
-                </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <img src="" alt="">
-                    </div>
-                    <div class="col">
-                        <h5>Michele</h5>
-                        <span>Ultimo messaggio inviato</span>
-                    </div>
-                    <div class="col-auto">
-                        <span>12:00</span>
-                    </div>                    
-                </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <img src="" alt="">
-                    </div>
-                    <div class="col">
-                        <h5>Michele</h5>
-                        <span>Ultimo messaggio inviato</span>
-                    </div>
-                    <div class="col-auto">
-                        <span>12:00</span>
-                    </div>                    
-                </div>
-                <div class="row">
-                    <div class="col-auto">
-                        <img src="" alt="">
-                    </div>
-                    <div class="col">
-                        <h5>Michele</h5>
-                        <span>Ultimo messaggio inviato</span>
-                    </div>
-                    <div class="col-auto">
-                        <span>12:00</span>
-                    </div>                    
-                </div>
-                
-                
+
             </div>
-            <div class="col-8">
+            <div class="col-8 p-0">
                 <div class="backgroundBox overflow-y-scroll"></div>
-                <div class="row textBox  d-flex align-items-center">
-                    <div class="col-auto ms-4">
+                <div class="textBox d-flex align-items-center">
+                    <div class="col-auto mx-2">
                         <i class="fa-regular fa-face-smile"></i>
                     </div>
                     <div class="col">
                         <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Scrivi un messaggio" aria-label="Search">
+                            <input class="form-control me-2" type="search" placeholder="Scrivi un messaggio"
+                                aria-label="Search">
                         </form>
                     </div>
                     <div class="col-auto me-4">
