--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         </div>
         <div class="row">
             <div class="col-4 p-0">
-                <div class="d-flex">
+                <div class="d-flex notificationBox p-2">
                     <i class="fa-solid fa-bell-slash notificationIcon"></i>
-                    <div>
+                    <div class="">
                         <h5>Ricevi notifiche di nuovi messaggi</h5>
                         <span>Attiva notifiche desktop</span>
                     </div>
@@ -162,7 +162,26 @@
 
             </div>
             <div class="col-8 p-0">
-                <div class="backgroundBox overflow-y-scroll"></div>
+                <div class="backgroundBox overflow-y-scroll">
+                    <div class="mt-5">
+                        <div class="sentMsg msg d-flex">
+                            <p>Ciao ciao prova</p>
+                            <span class="msgTime">15:50</span>
+                        </div>
+                        <div class="sentMsg msg d-flex">
+                            <p>Ciao ciao prova</p>
+                            <span class="msgTime">15:50</span>
+                        </div>
+                        <div class="receivedMsg msg d-flex">
+                            <p>Ciao ciao prova</p>
+                            <span class="msgTime">15:50</span>
+                        </div>
+                        <div class="sentMsg msg d-flex">
+                            <p>Ciao ciao prova</p>
+                            <span class="msgTime">15:50</span>
+                        </div>
+                    </div>
+                </div>
                 <div class="textBox d-flex align-items-center">
                     <div class="col-auto mx-2">
                         <i class="fa-regular fa-face-smile"></i>
