--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-    <div class="container bg-white">
+    <div class="container bg-white mt-5">
         <div class="row p-2">
             <div class="col-4 d-flex justify-content-between align-items-center">
                 <div>
                     <img src="img/avatar_io.jpg" alt="">
                     <span>Sofia</span>
                 </div>
-                <div class="me-4 text-secondary">
+                <div class="me-2 text-secondary">
                     <span><i class="fa-solid fa-circle-notch"></i></span>
                     <span class="px-2"><i class="fa-solid fa-message"></i></span>
                     <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
@@ -30,10 +30,10 @@
                     <img src="img/avatar_1.jpg" alt="">
                     <div class="d-flex flex-column">
                         <span class="">Michele</span>
-                        <span class="">Ultimo accesso oggi alle 12:00</span>
+                        <span class="infoText">Ultimo accesso oggi alle 12:00</span>
                     </div>
                 </div>
-                <div class="align-self-center me-4 text-secondary">
+                <div class="align-self-center me-2 text-secondary">
                     <span><i class="fa-solid fa-magnifying-glass"></i></span>
                     <span class="px-2"><i class="fa-solid fa-paperclip"></i></span>
                     <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
@@ -46,7 +46,7 @@
                     <i class="fa-solid fa-bell-slash notificationIcon"></i>
                     <div class="">
                         <h5>Ricevi notifiche di nuovi messaggi</h5>
-                        <span>Attiva notifiche desktop</span>
+                        <span class="infoText greyLink">Attiva notifiche desktop</span>
                     </div>
                 </div>
                 <div>
@@ -62,16 +62,16 @@
                     </nav>
                 </div>
                 <div class="container  overflow-y-scroll">
-                    <div class="row p-2">
+                    <div class="row p-2 actived">
                         <div class="col-auto">
                             <img src="img/avatar_1.jpg" alt="">
                         </div>
                         <div class="col">
                             <h5>Michele</h5>
-                            <span>Ultimo messaggio inviato</span>
+                            <span class="infoText">Ultimo messaggio inviato</span>
                         </div>
                         <div class="col-auto">
-                            <span>12:00</span>
+                            <span class="infoText">12:00</span>
                         </div>
                     </div>
                     <div class="row p-2">
@@ -79,11 +79,11 @@
                             <img src="img/avatar_2.jpg" alt="">
                         </div>
                         <div class="col">
-                            <h5>Michele</h5>
-                            <span>Ultimo messaggio inviato</span>
+                            <h5>Fabio</h5>
+                            <span class="infoText">Ultimo messaggio inviato</span>
                         </div>
                         <div class="col-auto">
-                            <span>12:00</span>
+                            <span class="infoText">12:00</span>
                         </div>
                     </div>
                     <div class="row p-2">
@@ -91,11 +91,11 @@
                             <img src="img/avatar_3.jpg" alt="">
                         </div>
                         <div class="col">
-                            <h5>Michele</h5>
-                            <span>Ultimo messaggio inviato</span>
+                            <h5>Samuele</h5>
+                            <span class="infoText">Ultimo messaggio inviato</span>
                         </div>
                         <div class="col-auto">
-                            <span>12:00</span>
+                            <span class="infoText">12:00</span>
                         </div>
                     </div>
                     <div class="row p-2">
@@ -103,11 +103,11 @@
                             <img src="img/avatar_4.jpg" alt="">
                         </div>
                         <div class="col">
-                            <h5>Michele</h5>
-                            <span>Ultimo messaggio inviato</span>
+                            <h5>Alessandro B.</h5>
+                            <span class="infoText">Ultimo messaggio inviato</span>
                         </div>
                         <div class="col-auto">
-                            <span>12:00</span>
+                            <span class="infoText">12:00</span>
                         </div>
                     </div>
                     <div class="row p-2">
@@ -115,11 +115,11 @@
                             <img src="img/avatar_5.jpg" alt="">
                         </div>
                         <div class="col">
-                            <h5>Michele</h5>
-                            <span>Ultimo messaggio inviato</span>
+                            <h5>Alessandro L.</h5>
+                            <span class="infoText">Ultimo messaggio inviato</span>
                         </div>
                         <div class="col-auto">
-                            <span>12:00</span>
+                            <span class="infoText">12:00</span>
                         </div>
                     </div>
                     <div class="row p-2">
@@ -127,11 +127,11 @@
                             <img src="img/avatar_6.jpg" alt="">
                         </div>
                         <div class="col">
-                            <h5>Michele</h5>
-                            <span>Ultimo messaggio inviato</span>
+                            <h5>Claudia</h5>
+                            <span class="infoText">Ultimo messaggio inviato</span>
                         </div>
                         <div class="col-auto">
-                            <span>12:00</span>
+                            <span class="infoText">12:00</span>
                         </div>
                     </div>
                     <div class="row p-2">
@@ -139,11 +139,11 @@
                             <img src="img/avatar_7.jpg" alt="">
                         </div>
                         <div class="col">
-                            <h5>Michele</h5>
-                            <span>Ultimo messaggio inviato</span>
+                            <h5>Federico</h5>
+                            <span class="infoText">Ultimo messaggio inviato</span>
                         </div>
                         <div class="col-auto">
-                            <span>12:00</span>
+                            <span class="infoText">12:00</span>
                         </div>
                     </div>
                     <div class="row p-2">
@@ -151,11 +151,11 @@
                             <img src="img/avatar_8.jpg" alt="">
                         </div>
                         <div class="col">
-                            <h5>Michele</h5>
-                            <span>Ultimo messaggio inviato</span>
+                            <h5>Davide</h5>
+                            <span class="infoText">Ultimo messaggio inviato</span>
                         </div>
                         <div class="col-auto">
-                            <span>12:00</span>
+                            <span class="infoText">12:00</span>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <div class="textBox d-flex align-items-center">
-                    <div class="col-auto mx-2">
+                    <div class="col-auto mx-4">
                         <i class="fa-regular fa-face-smile"></i>
                     </div>
                     <div class="col">
@@ -192,7 +192,7 @@
                                 aria-label="Search">
                         </form>
                     </div>
-                    <div class="col-auto me-4">
+                    <div class="col-auto mx-4">
                         <i class="fa-solid fa-microphone"></i>
                     </div>
                 </div>
