--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue-BoolZapp</title>
+    <script src="https://unpkg.com/vue@3.3.8/dist/vue.global.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -12,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container bg-white mt-5">
+    <div id="app" class="container bg-white mt-5">
         <div class="row p-2">
             <div class="col-4 d-flex justify-content-between align-items-center">
                 <div>
@@ -62,7 +63,19 @@
                     </nav>
                 </div>
                 <div class="container  overflow-y-scroll">
-                    <div class="row p-2 actived">
+                    <div v-for="contact in contacts" class="row p-2">
+                        <div class="col-auto">
+                            <img :src="contact.avatar" alt="">
+                        </div>
+                        <div class="col">
+                            <h5>{{contact.name}}</h5>
+                            <span class="infoText">Ultimo messaggio inviato</span>
+                        </div>
+                        <div class="col-auto">
+                            <span class="infoText">12:00</span>
+                        </div>
+                    </div>
+                    <!-- <div class="row p-2 actived">
                         <div class="col-auto">
                             <img src="img/avatar_1.jpg" alt="">
                         </div>
@@ -73,8 +86,8 @@
                         <div class="col-auto">
                             <span class="infoText">12:00</span>
                         </div>
-                    </div>
-                    <div class="row p-2">
+                    </div> -->
+                    <!-- <div class="row p-2">
                         <div class="col-auto">
                             <img src="img/avatar_2.jpg" alt="">
                         </div>
@@ -157,7 +170,7 @@
                         <div class="col-auto">
                             <span class="infoText">12:00</span>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
@@ -204,6 +217,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js"
         integrity="sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="js/main.js"></script>
 </body>
 
 </html>
