--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
             <div class="col-8 p-0">
                 <div class="backgroundBox overflow-y-scroll">
                     <div class="mt-5">
-                        <div class="sentMsg msg d-flex">
-                            <p>Ciao ciao prova</p>
+                        <div v-for="(value, key) in contacts" class="sentMsg msg d-flex">
+                            <p>{{ value.messages }}</p>
                             <span class="msgTime">15:50</span>
                         </div>
-                        <div class="sentMsg msg d-flex">
+                        <!-- <div class="sentMsg msg d-flex">
                             <p>Ciao ciao prova</p>
                             <span class="msgTime">15:50</span>
                         </div>
@@ -192,7 +192,7 @@
                         <div class="sentMsg msg d-flex">
                             <p>Ciao ciao prova</p>
                             <span class="msgTime">15:50</span>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="textBox d-flex align-items-center">
