feat: stampa messaggi e li differenzia

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </nav>
                 </div>
                 <div class="container  overflow-y-scroll">
-                    <div v-for="contact in contacts" class="row p-2">
+                    <div v-for="contact in contacts" :class="contact[0] ? 'row p-2 actived' : 'row p-2'">
                         <div class="col-auto">
                             <img :src="contact.avatar" alt="">
                         </div>
@@ -177,8 +177,8 @@
             <div class="col-8 p-0">
                 <div class="backgroundBox overflow-y-scroll">
                     <div class="mt-5">
-                        <div v-for="(value, key) in contacts" class="sentMsg msg d-flex">
-                            <p>{{ value.messages }}</p>
+                        <div v-for="(value, i) in contacts[0].messages" :class="value.status=='sent' ? 'sentMsg msg d-flex' : 'receivedMsg msg d-flex'">
+                            <p>{{ value.message }}</p>
                             <span class="msgTime">15:50</span>
                         </div>
                         <!-- <div class="sentMsg msg d-flex">
