--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img :src="contacts[counter].avatar" alt="">
                     <div class="d-flex flex-column">
                         <span class="">{{contacts[counter].name}}</span>
-                        <span class="infoText">Ultimo accesso oggi alle 12:00</span>
+                        <span class="infoText">Ultimo accesso oggi alle {{contacts[counter].messages[1].date}}</span>
                     </div>
                 </div>
                 <div class="align-self-center me-2 text-secondary">
@@ -52,147 +52,41 @@
                 </div>
                 <div>
                     <nav class="navbar bg-body-tertiary">
-                        <form class="container-fluid">
-                            <div class="input-group">
-                                <span class="input-group-text" id="basic-addon1"><i
-                                        class="fa-solid fa-magnifying-glass"></i></span>
-                                <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat"
-                                    aria-label="Username" aria-describedby="basic-addon1">
-                            </div>
-                        </form>
+
+                        <div class="input-group">
+                            <span class="input-group-text" id="basic-addon1"><i
+                                    class="fa-solid fa-magnifying-glass"></i></span>
+                            <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat"
+                                aria-label="Username" aria-describedby="basic-addon1">
+                        </div>
+
                     </nav>
                 </div>
                 <div class="container  overflow-y-scroll">
-                    <div v-for="(contact, i) in contacts" @click="prova(i)" :class="counter==i ? 'row p-2 actived' : 'row p-2'">
+                     <div v-for="(value, i) in contacts" @click="myCounter(i)" 
+                        :class="counter==i ? 'row p-2 actived' : 'row p-2'">
                         <div class="col-auto">
-                            <img :src="contact.avatar" alt="">
+                            <img :src="value.avatar" alt="">
                         </div>
                         <div class="col">
-                            <h5>{{contact.name}}</h5>
-                            <span class="infoText">Ultimo messaggio inviato</span>
+                            <h5>{{value.name}}</h5>
+                            <span class="infoText">{{contacts[i].messages[1].message}}</span>
                         </div>
                         <div class="col-auto">
-                            <span class="infoText">12:00</span>
+                            <span class="infoText">{{value.messages.date}}</span>
                         </div>
                     </div>
-                    <!-- <div class="row p-2 actived">
-                        <div class="col-auto">
-                            <img src="img/avatar_1.jpg" alt="">
-                        </div>
-                        <div class="col">
-                            <h5>Michele</h5>
-                            <span class="infoText">Ultimo messaggio inviato</span>
-                        </div>
-                        <div class="col-auto">
-                            <span class="infoText">12:00</span>
-                        </div>
-                    </div> -->
-                    <!-- <div class="row p-2">
-                        <div class="col-auto">
-                            <img src="img/avatar_2.jpg" alt="">
-                        </div>
-                        <div class="col">
-                            <h5>Fabio</h5>
-                            <span class="infoText">Ultimo messaggio inviato</span>
-                        </div>
-                        <div class="col-auto">
-                            <span class="infoText">12:00</span>
-                        </div>
-                    </div>
-                    <div class="row p-2">
-                        <div class="col-auto">
-                            <img src="img/avatar_3.jpg" alt="">
-                        </div>
-                        <div class="col">
-                            <h5>Samuele</h5>
-                            <span class="infoText">Ultimo messaggio inviato</span>
-                        </div>
-                        <div class="col-auto">
-                            <span class="infoText">12:00</span>
-                        </div>
-                    </div>
-                    <div class="row p-2">
-                        <div class="col-auto">
-                            <img src="img/avatar_4.jpg" alt="">
-                        </div>
-                        <div class="col">
-                            <h5>Alessandro B.</h5>
-                            <span class="infoText">Ultimo messaggio inviato</span>
-                        </div>
-                        <div class="col-auto">
-                            <span class="infoText">12:00</span>
-                        </div>
-                    </div>
-                    <div class="row p-2">
-                        <div class="col-auto">
-                            <img src="img/avatar_5.jpg" alt="">
-                        </div>
-                        <div class="col">
-                            <h5>Alessandro L.</h5>
-                            <span class="infoText">Ultimo messaggio inviato</span>
-                        </div>
-                        <div class="col-auto">
-                            <span class="infoText">12:00</span>
-                        </div>
-                    </div>
-                    <div class="row p-2">
-                        <div class="col-auto">
-                            <img src="img/avatar_6.jpg" alt="">
-                        </div>
-                        <div class="col">
-                            <h5>Claudia</h5>
-                            <span class="infoText">Ultimo messaggio inviato</span>
-                        </div>
-                        <div class="col-auto">
-                            <span class="infoText">12:00</span>
-                        </div>
-                    </div>
-                    <div class="row p-2">
-                        <div class="col-auto">
-                            <img src="img/avatar_7.jpg" alt="">
-                        </div>
-                        <div class="col">
-                            <h5>Federico</h5>
-                            <span class="infoText">Ultimo messaggio inviato</span>
-                        </div>
-                        <div class="col-auto">
-                            <span class="infoText">12:00</span>
-                        </div>
-                    </div>
-                    <div class="row p-2">
-                        <div class="col-auto">
-                            <img src="img/avatar_8.jpg" alt="">
-                        </div>
-                        <div class="col">
-                            <h5>Davide</h5>
-                            <span class="infoText">Ultimo messaggio inviato</span>
-                        </div>
-                        <div class="col-auto">
-                            <span class="infoText">12:00</span>
-                        </div>
-                    </div> -->
                 </div>
 
             </div>
             <div class="col-8 p-0">
                 <div class="backgroundBox overflow-y-scroll">
                     <div class="mt-5">
-                        <div v-for="(value, i) in contacts[counter].messages" :class="value.status=='sent' ? 'sentMsg msg d-flex' : 'receivedMsg msg d-flex'">
+                        <div v-for="(value, i) in contacts[counter].messages"
+                            :class="value.status=='sent' ? 'sentMsg msg d-flex' : 'receivedMsg msg d-flex'">
                             <p>{{ value.message }}</p>
-                            <span class="msgTime">15:50</span>
+                            <span class="msgTime">{{value.date}}</span>
                         </div>
-                        <!-- <div class="sentMsg msg d-flex">
-                            <p>Ciao ciao prova</p>
-                            <span class="msgTime">15:50</span>
-                        </div>
-                        <div class="receivedMsg msg d-flex">
-                            <p>Ciao ciao prova</p>
-                            <span class="msgTime">15:50</span>
-                        </div>
-                        <div class="sentMsg msg d-flex">
-                            <p>Ciao ciao prova</p>
-                            <span class="msgTime">15:50</span>
-                        </div> -->
                     </div>
                 </div>
                 <div class="textBox d-flex align-items-center">
@@ -200,10 +94,10 @@
                         <i class="fa-regular fa-face-smile"></i>
                     </div>
                     <div class="col">
-                        
-                            <input v-model="newMsg" @keyup.enter="addMsg" class="form-control me-2" type="text" placeholder="Scrivi un messaggio"
-                                aria-label="Search">
-                        
+
+                        <input v-model="newMsg" @keyup.enter="addMsg" class="form-control me-2" type="text"
+                            placeholder="Scrivi un messaggio" aria-label="Search">
+
                     </div>
                     <div class="col-auto mx-4">
                         <i class="fa-solid fa-microphone"></i>
@@ -217,7 +111,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js"
         integrity="sha512-WW8/jxkELe2CAiE4LvQfwm1rajOS8PHasCCx+knHG0gBHt8EXxS6T6tJRTGuDQVnluuAvMxWF4j8SNFDKceLFg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
